--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <LangVersion>9.0</LangVersion>
@@ -40,6 +40,10 @@
      <Compile Include="Assets\Scripts\PlayerBehavior.cs" />
      <Compile Include="Assets\Scripts\BasicEnemyBehavior.cs" />
      <Compile Include="Assets\Scripts\WeaponBehavior.cs" />
+     <Compile Include="Assets\Scripts\RogueEnemyBehavior.cs" />
+     <Compile Include="Assets\Scripts\BruteEnemyBehavior.cs" />
+     <Compile Include="Assets\Scripts\SpellcasterEnemyBehavior.cs" />
+     <Compile Include="Assets\Scripts\GameController.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.10f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
