--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,8 +47,10 @@
      <Compile Include="Assets\Scripts\WeaponBehaviors\WeaponBehavior.cs" />
      <Compile Include="Assets\Scripts\EnemyBehaviors\BruteEnemyBehavior.cs" />
      <Compile Include="Assets\Scripts\Controllers\UIController.cs" />
-     <Compile Include="Assets\Scripts\Controllers\WeaponRigController.cs" />
+     <Compile Include="Assets\Scripts\Controllers\FinanceController.cs" />
      <Compile Include="Assets\Scripts\Controllers\GateController.cs" />
+     <Compile Include="Assets\Scripts\Controllers\WeaponRigController.cs" />
+     <Compile Include="Assets\Scripts\Controllers\DroppedItemBehavior.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
