Adds credits to the death screens

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
      <Compile Include="Assets\Scripts\Controllers\BtnController.cs" />
      <Compile Include="Assets\Scripts\EnemyBehaviors\BossEnemyBehavior.cs" />
      <Compile Include="Assets\Scripts\Controllers\StartMenuController.cs" />
+     <Compile Include="Assets\Scripts\EnemyBehaviors\SlimeEnemyBehavior.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
